# Captcha-Recognition

./: .env  .gitignore  README.md  main.py  pyproject.toml
deploy/captcha_convolutionaltransformer_base/: README.md  configuration_captcha.py
deploy/captcha_convolutionaltransformer_finetuned/: README.md  config.json  modeling_captcha.py  pipeline.py  processing_captcha.py  processor_config.json
deploy/captcha_crnn_base/: README.md  modeling_captcha.py
deploy/captcha_crnn_finetuned/: README.md  config.json  configuration_captcha.py
exploration/: crnn.ipynb  dataset-exploration.ipynb
notebooks/: crnn.ipynb  crnn_v1.ipynb  crnn_v2.ipynb  huggingface-dataset.ipynb  kaggle-dataset.ipynb  model-evaluation.ipynb
notebooks/augmentation/: augmentation.ipynb
notebooks/autoencoder/: autoencoder_model_evaluation.ipynb  autoencoder_v1.ipynb
notebooks/benchmark/: ocr-captcha-v3.ipynb
notebooks/convtrans/: convtrans_v1.ipynb  convtrans_v3.py  convtrans_v4.py  convtrans_v5.py  convtrans_v6.py  covtrans_v2.ipynb  model-evaluation.ipynb
notebooks/crnn/: crnn_v1.ipynb  crnn_v2.ipynb  crnn_v3.py  crnn_v4.py  crnn_v5.py  crnn_v6.py  model-evaluation.ipynb
notebooks/data-analysis/: huggingface-dataset.ipynb  kaggle-dataset.ipynb
notebooks/data-cleaning/: 01_error-analysis.ipynb
scripts/: deploy_convtrans_base.ipynb  deploy_convtrans_finetuned.ipynb  deploy_crnn_base.ipynb  deploy_crnn_finetuned.ipynb  download-coco-dataset.py  download-dataset.py  download-huggingface-dataset.py  download-iiit5k-dataset.py  generate-dataset.ipynb
src/: captchadataset.py
src/datasets/: cifar10dataset.py  (+6 more)
(+13 files in other folders)
