[project]
name = "captcha-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "kagglehub>=0.4.2",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
]

[[tool.uv.index]] 
name = "pytorch-cu130" 
url = "https://download.pytorch.org/whl/cu130" 
explicit = true 

[tool.uv.sources] 
torch = { index = "pytorch-cu130" } 
torchvision = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
